# cyrius-rs

./: .gitignore  ANALYSIS_3_WRONG_SAMPLES.md  CHANGELOG.md  CLAUDE.md  HG00111.final.cram.crai  HG00337.final.cram.crai  HG00421.final.cram.crai  HG00436.final.cram.crai  HG00463.final.cram.crai  HG00589.final.cram.crai  HG01086.final.cram.crai  HG01094.final.cram.crai  HG01108.final.cram.crai  HG01190.final.cram.crai  HG01680.final.cram.crai  HG02373.final.cram.crai  HG02657.final.cram.crai  HG03225.final.cram.crai  HG03246.final.cram.crai  HG03259.final.cram.crai  HG03619.final.cram.crai  HG03643.final.cram.crai  HG03703.final.cram.crai  HG03780.final.cram.crai  HG03781.final.cram.crai  HG03882.final.cram.crai  HG04206.final.cram.crai  IMPROVEMENTS.md  NA06989.final.cram.crai  NA11832.final.cram.crai  NA12154.final.cram.crai  NA12878.final.cram.crai  NA18519.final.cram.crai  NA18526.final.cram.crai  NA18544.final.cram.crai  NA18545.final.cram.crai  NA18563.final.cram.crai  NA18564.final.cram.crai  NA18565.final.cram.crai  NA18572.final.cram.crai  (+25 more)
.claude/: settings.json
bcyrius/: README.md  pyproject.toml
bcyrius/caller/: construct_star_table.py  match_star_allele.py
bcyrius/depth_calling/: haplotype.py  snp_count.py
bcyrius/star_caller/: star_caller.py
cyrius-rs/: Cargo.toml
cyrius-rs/data/: CYP2D6_diagnostic_panel.json  CYP2D6_region_38.bed
cyrius-rs/src/: data.rs  fisher.rs  lib.rs  main.rs  phenotype.rs  stats.rs  types.rs
cyrius-rs/src/align/: mod.rs  myers.rs  pigeonhole.rs  qgram_index.rs  sequence.rs
cyrius-rs/src/caller/: af_phasing.rs  call_variants.rs  changepoint.rs  clip_evidence.rs  cn_classifier.rs  cnv_hybrid.rs  confidence.rs  consistency.rs  construct_star_table.rs  d7_depth.rs  diplotype_caller.rs  fuzzy_match.rs  haplotype_resolve.rs  het_check.rs  hmm_cnv.rs  kmer_validation.rs  match_star_allele.rs  mod.rs  phase_disambiguate.rs  read_phasing.rs  read_voting.rs  strand_bias_all.rs
cyrius-rs/src/depth_calling/: bin_count.rs  copy_number_call.rs  gmm.rs  haplotype.rs  mod.rs  quality_aware.rs  snp_count.rs  utilities.rs
data/: star_table.txt  (+5 more)
(+8 files in other folders)
