[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "BCyrius"
version = "1.0.5"
description = "CYP2D6 genotyping tool"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "pysam>=0.22.1",
    "regex>=2024.5.15",
    "scipy>=1.14.0",
    "statsmodels>=0.14.2",
]

license = "Apache-2.0"
license-files = ["LICENSE.txt"]

[tool.hatch.build]
packages = ["caller", "data", "depth_calling", "star_caller"]


[project.scripts]
bcyrius = "star_caller.star_caller:main"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
BCyrius = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.12"
